--- a/src/styles/ending.scss
+++ b/src/styles/ending.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 .ending {
   font-family: 'Architects Daughter', cursive;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -9,7 +9,7 @@
   background-color: $purple1;
 
   p {
-    padding: 2rem;
+    padding: 1rem 3rem;
     font-size: calc(1rem + 1vw);
     color: $black;
   }
@@ -24,9 +24,8 @@
     }
   }
   .end-icon {
-    font-size: 2rem;
-    padding: 1rem;
-    cursor: pointer;
+    font-size: 1.5rem;
+    padding: 0.5rem;
     -webkit-transition: all 0.75s ease-in-out;
     -moz-transition: all 0.75s ease-in-out;
     -o-transition: all 0.75s ease-in-out;
